Edited Index Page: Added timeline facebook post / Added new class: Post (To add,select... id_post)

--- a/WowLatinos/appsettings.json
+++ b/WowLatinos/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "MySQLConnection": "Server=localhost;User Id=;Password=;Database=auth"
+    "MySQLConnection": "Server=localhost;User Id=root;Password=e2cucku1"
   },
   "Logging": {
     "IncludeScopes": false,
