--- a/WowLatinos/WowLatinos.csproj
+++ b/WowLatinos/WowLatinos.csproj
@@ -1,41 +1,33 @@
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <MvcRazorCompileOnPublish>true</MvcRazorCompileOnPublish>
     <PackageTargetFallback>$(PackageTargetFallback);portable-net45+win8+wp8+wpa81;</PackageTargetFallback>
     <UserSecretsId>aspnet-WowLatinos-877F464E-E0FF-4429-944E-803FFF25586C</UserSecretsId>
   </PropertyGroup>
-
-
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore" Version="2.0.0-preview1-final" />
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0-preview1-final" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.0-preview1-final" />
-    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.0-preview1-final" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.0-preview1-final" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.0-preview1-final" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="2.0.0-preview1-final" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.0-preview1-final" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.0.0-preview1-final" />
-    <PackageReference Include="Microsoft.jQuery.Unobtrusive.Ajax" Version="3.2.3" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.0.0-preview1-final" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0-preview1-final" />
-    <PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.0.0-preview1-final"/>
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0-preview1-final"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.0-preview1-final"/>
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.0-preview1-final"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.0-preview1-final"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.0-preview1-final"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="2.0.0-preview1-final"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.0-preview1-final"/>
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.0.0-preview1-final"/>
+    <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.0.0-preview1-final"/>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0-preview1-final"/>
+    <PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.3.0"/>
   </ItemGroup>
-
   <ItemGroup>
-    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0-preview1-final" />
+    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0-preview1-final"/>
   </ItemGroup>
-
   <ItemGroup>
-    <Folder Include="wwwroot\js\extensions\" />
+    <Folder Include="wwwroot\js\extensions\"/>
   </ItemGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\DBAccess\DBAccess.csproj" />
-    <ProjectReference Include="..\HelpersSQL\HelpersSQL.csproj" />
+    <ProjectReference Include="..\DBAccess\DBAccess.csproj"/>
+    <ProjectReference Include="..\HelpersSQL\HelpersSQL.csproj"/>
   </ItemGroup>
-
 </Project>
